--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="style.css">
-    <title>guess-my-number</title>
+    <title>Guess-My-Number</title>
 </head>
 <body class="bg-red-600">
     <!-- nav -->
      <nav class="container mx-auto px-4 md:px-12 py-6 flex justify-between items-center">
-        <button class="bg-white w-30 h-13 text-xl cursor-pointer rounded">Again!</button>
+        <button class="bg-white w-30 h-13 text-xl cursor-pointer rounded refresh-btn">Again!</button>
         <h4 class="text-white text-xl md:text-2xl"> (Between 1 and 6) </h4>
      </nav>
      <!-- header -->
